relaxng-gen/tests/snapshots/build__test-collapse_with_parent.snap
---
source: relaxng-gen/tests/build.rs
expression: combined
---
--- lib.rs ---
#![doc = concat!(
    "Generated from ",
    "'/home/elmarco/src/relaxng-rust/relaxng-gen/tests/fixtures/collapse_with_parent.rng'",
    " schema."
)]
#![allow(dead_code)]
#![allow(unused_mut)]
#![allow(unused_variables)]
#![allow(unused_imports)]
use thiserror::Error;
pub mod root;
pub use root::*;
/// The error type used by this crate.
#[derive(Error, Debug)]
pub enum Error {
    #[error("IO error: {0}")]
    Io(#[from] std::io::Error),
    #[error("From UTF-8 error: {0}")]
    FromUtf8Error(#[from] std::string::FromUtf8Error),
    #[error("{0} builder is missing mandatory field: {1}")]
    BuilderMissingField(&'static str, &'static str),
    #[error("{0} builder cannot build a variant")]
    BuilderVariant(&'static str),
    #[error("String too short, expected at least {0} characters, got {1}")]
    TooShort(usize, usize),
    #[error("String too long, expected at most {0} characters, got {1}")]
    TooLong(usize, usize),
    #[error("String '{0}' does not match pattern '{1}'")]
    PatternMismatch(&'static str, String),
    #[error("Failed to compile regex: {0}")]
    RegexError(#[from] regex::Error),
    #[error("Failed to parse '{0}': {1}")]
    ParseError(
        &'static str,
        #[source]
        Box<dyn std::error::Error + Send + Sync + 'static>,
    ),
}
impl From<std::convert::Infallible> for Error {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible error should not occur")
    }
}
/// Helper trait for this crate XML types.
pub trait ToXml {
    /// The associated builder type.
    type Builder: Default;
    /// Creates a new builder for this type.
    fn builder() -> Self::Builder {
        Self::Builder::default()
    }
    /// Writes Events to a XML writer.
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write;
}
#[doc(hidden)]
pub trait RegexPattern {
    const REGEX: &'static str;
}
#[doc(hidden)]
#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub struct NoPattern;
impl RegexPattern for NoPattern {
    const REGEX: &'static str = "";
}
/// A string type with length constraints and optional runtime regex validation.
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct ConstrainedString<
    const MIN_LEN: usize,
    const MAX_LEN: usize,
    P: RegexPattern = NoPattern,
> {
    value: String,
    _phantom: std::marker::PhantomData<P>,
}
impl<
    const MIN: usize,
    const MAX: usize,
    P: RegexPattern,
> ConstrainedString<MIN, MAX, P> {
    pub const NO_MIN_CONSTRAINT: usize = 0;
    pub const NO_MAX_CONSTRAINT: usize = usize::MAX;
    pub fn try_new(value: impl Into<String>) -> Result<Self> {
        let s = value.into();
        Self::validate(&s)?;
        Ok(Self {
            value: s,
            _phantom: std::marker::PhantomData,
        })
    }
    fn validate(s: &str) -> Result<()> {
        fn get_compiled_regex(pattern: &'static str) -> Result<regex::Regex> {
            /// Registry for compiled regex patterns
            static REGEX_REGISTRY: std::sync::OnceLock<
                std::sync::Mutex<std::collections::HashMap<&'static str, regex::Regex>>,
            > = std::sync::OnceLock::new();
            if pattern.is_empty() {
                return Ok(regex::Regex::new(".*").unwrap());
            }
            let registry = REGEX_REGISTRY
                .get_or_init(|| std::sync::Mutex::new(std::collections::HashMap::new()));
            let mut map = registry.lock().unwrap();
            if let Some(regex) = map.get(pattern) {
                return Ok(regex.clone());
            }
            match regex::Regex::new(pattern) {
                Ok(regex) => {
                    let result = regex.clone();
                    map.insert(pattern, regex);
                    Ok(result)
                }
                Err(e) => Err(Error::RegexError(e)),
            }
        }
        if MIN > Self::NO_MIN_CONSTRAINT && s.len() < MIN {
            return Err(Error::TooShort(MIN, s.len()));
        }
        if MAX < Self::NO_MAX_CONSTRAINT && s.len() > MAX {
            return Err(Error::TooLong(MAX, s.len()));
        }
        if !P::REGEX.is_empty() {
            let regex = get_compiled_regex(P::REGEX)?;
            if !regex.is_match(s) {
                return Err(Error::PatternMismatch(P::REGEX, s.to_string()));
            }
        }
        Ok(())
    }
    /// Returns the string as a `&str`.
    #[must_use]
    pub fn as_str(&self) -> &str {
        &self.value
    }
    /// Converts the constrained string into a `String`, consuming it.
    #[must_use]
    pub fn into_string(self) -> String {
        self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::ops::Deref
for ConstrainedString<MIN, MAX, P> {
    type Target = str;
    fn deref(&self) -> &Self::Target {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::fmt::Display
for ConstrainedString<MIN, MAX, P> {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.value)
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> AsRef<str>
for ConstrainedString<MIN, MAX, P> {
    fn as_ref(&self) -> &str {
        &self.value
    }
}
impl<const MIN: usize, const MAX: usize, P: RegexPattern> std::str::FromStr
for ConstrainedString<MIN, MAX, P> {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        Self::try_new(s)
    }
}
/// A specialized Result type where the error is hard-wired to [`enum@Error`].
pub type Result<T, E = Error> = std::result::Result<T, E>;

--- main.rs ---
use std::path::Path;
use std::{env::args, fs};
fn main() {
    let path = args().nth(1).expect("No XML file path provided");
    let xml_path = Path::new(&path);
    let xml = fs::read_to_string(xml_path).expect("Failed to read test XML file");
    let xml = roxmltree::Document::parse(&xml).expect("Failed to parse XML");
    let root = xml.root().first_child().expect("No root element found");
    let res = test_collapse_with_parent::Root::from_xml(&root).unwrap();
    let res = res.to_string();
    println!("{}", res);
}

--- root/wordsize.rs ---
use crate::{Error, Result, ToXml};
use std::str::FromStr;
///wordsize doc
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub enum Wordsize {
    _31,
    _32,
    _64,
}
impl ToXml for Wordsize {
    type Builder = WordsizeBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{BytesEnd, BytesStart, BytesText, Event};
        writer.write_event(Event::Start(BytesStart::new("wordsize")))?;
        match self {
            Self::_31 => {
                writer.write_event(Event::Text(BytesText::new("31")))?;
            }
            Self::_32 => {
                writer.write_event(Event::Text(BytesText::new("32")))?;
            }
            Self::_64 => {
                writer.write_event(Event::Text(BytesText::new("64")))?;
            }
        }
        writer.write_event(Event::End(BytesEnd::new("wordsize")))?;
        Ok(())
    }
}
impl core::fmt::Display for Wordsize {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
impl Wordsize {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        pub fn from_xml(
            node: &roxmltree::Node,
            from_child: &mut Option<roxmltree::Node>,
        ) -> Result<Wordsize> {
            let mut builder = Wordsize::builder();
            loop {
                let Some(child) = from_child else {
                    break;
                };
                match child.node_type() {
                    roxmltree::NodeType::Element => {
                        match child.tag_name().name() {
                            _ => {}
                        }
                    }
                    roxmltree::NodeType::Text => {
                        if let Some(val) = child.text() {
                            match val {
                                "31" => {
                                    builder._31()?;
                                }
                                "32" => {
                                    builder._32()?;
                                }
                                "64" => {
                                    builder._64()?;
                                }
                                _ => {}
                            }
                        }
                    }
                    _ => {}
                }
                *from_child = child.next_sibling();
                if let Ok(build) = builder.build() {
                    return Ok(build);
                }
            }
            builder.build()
        }
        from_xml(node, &mut node.first_child())
    }
    pub fn to_xml_attr(
        &self,
        xml_start: &mut quick_xml::events::BytesStart<'_>,
    ) -> Result<()> {
        match self {
            Self::_31 => {}
            Self::_32 => {}
            Self::_64 => {}
        }
        Ok(())
    }
    pub fn is_empty(&self) -> bool {
        self.to_string().is_empty()
    }
}
impl FromStr for Wordsize {
    type Err = Error;
    fn from_str(s: &str) -> Result<Self> {
        let mut builder = Self::builder();
        match s {
            "31" => {
                builder._31()?;
            }
            "32" => {
                builder._32()?;
            }
            "64" => {
                builder._64()?;
            }
            other => {
                dbg!(other);
            }
        }
        builder.build()
    }
}
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct WordsizeBuilder {
    _31: Option<()>,
    _32: Option<()>,
    _64: Option<()>,
}
impl WordsizeBuilder {
    pub fn _31(&mut self) -> Result<&mut Self> {
        self._31 = Some(());
        Ok(self)
    }
    pub fn _32(&mut self) -> Result<&mut Self> {
        self._32 = Some(());
        Ok(self)
    }
    pub fn _64(&mut self) -> Result<&mut Self> {
        self._64 = Some(());
        Ok(self)
    }
    pub fn build(&self) -> Result<Wordsize> {
        if self._31.is_some() {
            return Ok(Wordsize::_31);
        }
        if self._32.is_some() {
            return Ok(Wordsize::_32);
        }
        if self._64.is_some() {
            return Ok(Wordsize::_64);
        }
        Err(Error::BuilderVariant("Wordsize"))
    }
}

--- root.rs ---
//!`root` module
use crate::{Error, Result, ToXml};
use std::str::FromStr;
pub mod wordsize;
use wordsize::Wordsize;
///`<root/>` element
#[derive(Debug, Clone, PartialEq, Eq, Hash)]
pub struct Root {
    ///wordsize doc
    pub wordsize: Wordsize,
}
impl ToXml for Root {
    type Builder = RootBuilder;
    fn to_xml<W>(&self, writer: &mut quick_xml::Writer<W>) -> Result<()>
    where
        W: std::io::Write,
    {
        use quick_xml::events::{Event, BytesStart, BytesEnd, BytesText};
        let mut xml_start = BytesStart::new("root");
        {
            let elem = &self.wordsize;
            elem.to_xml_attr(&mut xml_start)?;
        }
        let empty = {
            true
                && ({
                    let elem = &self.wordsize;
                    elem.is_empty()
                })
        };
        if empty {
            writer.write_event(Event::Empty(xml_start))?;
        } else {
            writer.write_event(Event::Start(xml_start))?;
            {
                let elem = &self.wordsize;
                elem.to_xml(writer)?;
            }
            writer.write_event(Event::End(BytesEnd::new("root")))?;
        }
        Ok(())
    }
}
impl Root {
    pub fn from_xml(node: &roxmltree::Node) -> Result<Self> {
        let mut builder = Self::builder();
        for child in node.children() {
            match child.tag_name().name() {
                _ => continue,
            }
        }
        if let Some(val) = node.text() {
            match val {
                _ => {}
            }
        }
        let child = &mut node.first_child();
        loop {
            if child.is_none() {
                break;
            }
            if let Some(child) = child {
                if child.is_element() && child.tag_name().name() == "wordsize" {
                    builder.wordsize(Wordsize::from_xml(child)?)?;
                }
            }
            *child = child.and_then(|c| c.next_sibling());
        }
        builder.build()
    }
}
impl core::fmt::Display for Root {
    fn fmt(&self, f: &mut core::fmt::Formatter<'_>) -> std::fmt::Result {
        let mut writer = quick_xml::Writer::new_with_indent(
            std::io::Cursor::new(Vec::new()),
            b' ',
            2,
        );
        self.to_xml(&mut writer).expect("Failed to generate XML");
        let res = writer.into_inner().into_inner();
        let str = String::from_utf8(res).expect("Failed to convert bytes to string");
        f.write_str(&str)
    }
}
///`<root/>` builder
#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]
pub struct RootBuilder {
    ///wordsize doc
    pub wordsize: Option<Wordsize>,
}
impl RootBuilder {
    ///wordsize doc
    pub fn wordsize<T>(&mut self, wordsize: T) -> Result<&mut Self>
    where
        T: TryInto<Wordsize>,
        Error: From<<T as TryInto<Wordsize>>::Error>,
    {
        self.wordsize = Some(wordsize.try_into()?);
        Ok(self)
    }
    /**
            Attempt to build [`Root`].

            If the element is not valid, an error is returned.
            */
    pub fn build(&self) -> Result<Root> {
        let wordsize = Clone::clone(
            self.wordsize.as_ref().ok_or(Error::BuilderMissingField("root", "wordsize"))?,
        );
        Ok(Root { wordsize })
    }
}
